Added the register function